# SofaHaplyRobotics

./: CMakeLists.txt  README.md  SofaHaplyRoboticsConfig.cmake.in
extlib/: Inverse3.cpp  Inverse3.h  SerialStream.h  Stream.h
scenes/: Inverse3-DeformableCubes.scn  Inverse3-DeformableCubes.scn.qglviewer.view  Inverse3-DeformableLiver.scn  Inverse3-DeformableLiver.scn.qglviewer.view  Inverse3-DeformableSphere.scn  Inverse3-DeformableSphere.scn.qglviewer.view  Inverse3-Demo.scn  Inverse3-Demo.scn.qglviewer.view  Inverse3-RigidCube.scn  Inverse3-RigidCube.scn.qglviewer.view  Inverse3-RigidSphere.scn  Inverse3-RigidSphere.scn.qglviewer.view  Inverse3_Demo-01_DeviceMotion.scn  Inverse3_Demo-01_DeviceMotion.scn.qglviewer.view  Inverse3_Demo-01_DeviceMotion.scn.view  Inverse3_Demo-02_RigidCube.scn  Inverse3_Demo-02_RigidSphere.scn  Inverse3_Demo-02_RigidSphere.scn.qglviewer.view  Inverse3_Demo-02_RigidSphere.scn.view  Inverse3_Demo-03_DeformableCubes.scn  Inverse3_Demo-03_DeformableSphere.scn  Inverse3_Demo-03_DeformableSphere.scn.qglviewer.view  Inverse3_Demo-03_DeformableSphere.scn.view  Inverse3_Demo-04_RigidCube.scn  Inverse3_Demo-04_RigidCube.scn.qglviewer.view  Inverse3_Demo-04_RigidCube.scn.view  Inverse3_Demo-04_RigidSphere.scn  Inverse3_Demo-05_DeformableCubes.scn  Inverse3_Demo-05_DeformableCubes.scn.qglviewer.view  Inverse3_Demo-05_DeformableCubes.scn.view  Inverse3_Demo-05_DeformableSphere.scn  Inverse3_Demo-06_DeformableLiver.scn  Inverse3_Demo-06_RigidSkull.scn  Inverse3_Demo-06_RigidSkull.scn.qglviewer.view  Inverse3_Demo-06_RigidSkull.scn.view  Inverse3_Demo-07_DeformableLiver.scn  Inverse3_Demo-07_DeformableLiver.scn.qglviewer.view  Inverse3_Demo-07_DeformableLiver.scn.view
src/SofaHaplyRobotics/: Haply_Defines.h  Haply_HapticThreadManager.cpp  Haply_HapticThreadManager.h  Haply_Inverse3Controller.cpp  Haply_Inverse3Controller.h  config.h.in  initSofaHaplyRoboticsPlugin.cpp
